--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -5,7 +5,7 @@
 @import "base/typography";
 @import "helpers/global";
 @import "helpers/ultilities";
-
+@import "layout/structure";
 @import "layout/header";
 @import "layout/footer";
 
