--- a/app/views/layout/layout.pug
+++ b/app/views/layout/layout.pug
@@ -17,7 +17,7 @@ html(lang="en")
 		link(rel="stylesheet", href="styles/reset.css")
 		link(rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")
 		link( rel="preconnect" href="https://fonts.googleapis.com")
-		link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin>)
+		link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
 		link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet")
 		link(rel="stylesheet", href="styles/fontawesome.css")
 		link(rel="stylesheet", href="styles/styles.css")
